--- a/wallet.css
+++ b/wallet.css
@@ -19,10 +19,21 @@ body {
 }
 
 .box {
-    background-color: #fff;
+    background-color: blanchedalmond;
     padding: 30px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
     border-radius: 20px;
+    max-width: 800px;
+    width: 100%;
+    text-align: center;
+    transition: background-color 0.3s ease, box-shadow 0.3s ease;
+}
+.box1{
+    background-color: burlywood;
+    padding: 30px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+    border-radius: 20px;
+    height: 380px;
     max-width: 800px;
     width: 100%;
     text-align: center;
